<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RunStat</string>
    <string name="action_settings">Settings</string>
    <string name="strLat">00,00</string>
    <string name="strLng">00,00</string>
    <string name="strLocationLabel">Location:</string>
    <string name="strShowLocation">Show on map</string>
    <string name="strStepsLabel">Steps:</string>
    <string name="strSteps"> </string>
    <string name="strLogLabel">Log:</string>
    <string name="action_help">Help</string>
    <string name="service_name">RunningService</string>
    <string name="local_service_started"/>
    <string name="local_service_stopped"/>
    <string name="strService">Service</string>
    <string name="strBRun">BASIC RUNNING</string>
    <string name="strCurrSpeed">0.0</string>
    <string name="strEnd">End</string>
    <string name="strBack">Back</string>
    <string name="strStart">Start</string>
    <string name="strHistory">History</string>
    <string name="strHelpIcon">Help</string>
    <string name="strDistanceRun">DISTANCE RUNNING</string>
    <string name="strTimeRun">TIME RUNNING</string>
    <string name="strSeedUnit">Km/h</string>
    <string name="strDistanceDone">0 m</string>
    <string name="strHelpText">Lorem ipsum</string>
    <string name="strLocated">Located</string>
    <string name="strProvider">Provider:</string>
    <string name="strSynchronize">Synchronize</string>
    <string name="strBtnSync">Synchronize locations</string>
	<string name="pref_general">General</string>
	<string name="pref_title_usewifi">Use wifi provider</string>
	<string name="pref_summary_usewifi">Use wifi provider for locating your running. This is unrecomended setting.</string>
	<string name="menu_basic">Basic running</string>
	<string name="menu_distance">Distance running</string>
	<string name="menu_time">Time running</string>
	<string name="menu_title">Select type</string>
	<string name="strDistanceRunning">DISTANCE RUNNING</string>
	<string name="strDistanceGoal">0/1000m</string>
	<string name="strDistanceSet">Please set distance (m)</string>
	<string name="strBtnSetDistance">OK</string>
	<string name="strSetTime">Please set time</string>
	
</resources>
