<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    tools:context=".BasicrunActivity" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="74dp" >

        <TextView
            android:id="@+id/txtCurrentSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/strCurrSpeed"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="80sp" />

        <TextView
            android:id="@+id/txtLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtCurrentSpeed"
            android:layout_centerHorizontal="true"
            android:text="@string/strSeedUnit"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/txtDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtLocation"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14dp"
            android:text="@string/strDistanceDone"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/txtSteps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtDistance"
            android:layout_centerHorizontal="true"
            android:text="@string/strSteps" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnEnd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/strEnd" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_margin="8dp"
            android:text="@string/strBRun"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/btnHelp"
            android:layout_width="38dp"
            android:layout_height="33dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/strHelpIcon"
            android:src="@android:drawable/ic_menu_help" />
    </RelativeLayout>

    <CheckBox
        android:id="@+id/chckLocated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout2"
        android:layout_alignParentLeft="true"
        android:clickable="false"
        android:text="@string/strLocated"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/txtProvider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/chckLocated"
        android:layout_alignBottom="@+id/chckLocated"
        android:layout_marginLeft="19dp"
        android:layout_toRightOf="@+id/chckLocated"
        android:text="@string/strProvider"
        android:textSize="10sp" />

</RelativeLayout>