<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    tools:context=".BasicrunActivity" >

    <RelativeLayout
        android:id="@+id/formInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="74dp"
        android:visibility="invisible" >

        <TextView
            android:id="@+id/txtCurrentSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/strCurrSpeed"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="80sp" />

        <TextView
            android:id="@+id/txtLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtCurrentSpeed"
            android:layout_centerHorizontal="true"
            android:text="@string/strSeedUnit"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/txtDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtLocation"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14dp"
            android:text="@string/strDistanceDone"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/txtSteps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtDistance"
            android:layout_centerHorizontal="true"
            android:text="@string/strSteps" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnEnd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/strEnd" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_margin="8dp"
            android:text="@string/strTimeRun"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/btnHelp"
            android:layout_width="38dp"
            android:layout_height="33dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/strHelpIcon"
            android:src="@android:drawable/ic_menu_help" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/formLocationInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout2"
        android:visibility="invisible" >

        <ProgressBar
            android:id="@+id/pBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:clickable="false"
            android:visibility="visible" />

        <CheckBox
            android:id="@+id/chckLocated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:clickable="false"
            android:text="@string/strLocated"
            android:textSize="10sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/txtProvider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/chckLocated"
            android:layout_alignBottom="@+id/chckLocated"
            android:layout_marginLeft="18dp"
            android:layout_toRightOf="@+id/chckLocated"
            android:text="@string/strProvider"
            android:textSize="10sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/formSetDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/formInfo"
        android:layout_margin="5dp"
        android:gravity="fill" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtHistoryDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strSetTime"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >

                    <EditText
                        android:id="@+id/txtSetHours"
                        android:layout_width="92dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="number" >

                        <requestFocus />
                    </EditText>

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="hours"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="161dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >

                    <EditText
                        android:id="@+id/txtSetMinutes"
                        android:layout_width="72dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.09"
                        android:ems="10"
                        android:inputType="number" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="minutes"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnSetTime"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="32dp"
            android:text="@string/strBtnSetDistance" />
    </RelativeLayout>

    <TextView
        android:id="@+id/txtTimee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/formLocationInfo"
        android:layout_centerHorizontal="true"
        android:text=" "
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>